Pipe runner works

--- a/demoApps/todoApp/index.html
+++ b/demoApps/todoApp/index.html
@@ -12,7 +12,7 @@
         <h3 class="section-header">ADD ITEM</h3>
         <div class="section-body">
           <input class="task-input longest" type="text" />
-          <button class="task-button correct">Add</button>
+          <button class="task-button to-add correct">Add</button>
         </div>
       </section>
 
