Coverage data generated

--- a/demoApps/todoApp/index.html
+++ b/demoApps/todoApp/index.html
@@ -31,6 +31,6 @@
       </section>
     </div>
 
-    <script type="text/javascript" src="dist/app.build.js"></script>
+    <script type="text/javascript" src="dist/todo.js"></script>
   </body>
 </html>
